# ActiveSLAM

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/AprilTags/: TagDetector.h
launch/: active_slam.launch  freenect.launch  rviz.launch  test.launch
matlab/: MLscript.m  checkVisibility.m  lm.txt  log.txt  matlab_script.m  matlabscript.m  nb.txt  pythonscript.py
src/: StateEstimator.cpp  StateEstimator.h  active_slam_node.cpp  map_processor.cpp  map_processor.hpp  planner.cpp  planner.cpp.autosave  planner.hpp  test.cpp
src/apriltags/: CMakeLists.txt  FloatImage.cc  GLine2D.cc  GLineSegment2D.cc  Gaussian.cc  Homography33.cc  MathUtil.cc  Segment.cc  TagDetection.cc  TagFamily.cc  UnionFindSimple.cc
src/isam/: CMakeLists.txt
